--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "node ./node_modules/nuxt/bin/nuxt.js start",
     "generate": "nuxt generate"
   },
   "dependencies": {
