--- a/.github/workflows/main_plugin-app.yml
+++ b/.github/workflows/main_plugin-app.yml
@@ -51,6 +51,9 @@ jobs:
 
       - name: unzip artifact for deployment
         run: Expand-Archive release.zip
+        
+      - name: Delete .zip
+        run: rm release.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
